--- a/src/pages/breakfast.astro
+++ b/src/pages/breakfast.astro
@@ -226,40 +226,52 @@ import Layout from "../layouts/Layout.astro";
     </div>
     <div class="menu-list">
         <div class="menu-item">
-            <span>English Tea</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="English Tea" data-prices='{"Default": 150}'>Order</button>
+            <span>English Tea</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="English Tea" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Black Tea</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Black Tea" data-prices='{"Default": 150}'>Order</button>
+            <span>Black Tea</span> <span>KSh 100</span>
+            <button class="order-btn" data-item="Black Tea" data-prices='{"Default": 100}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Coffee</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Coffee" data-prices='{"Default": 150}'>Order</button>
+            <span>Coffee</span> <span>KSh 100</span>
+            <button class="order-btn" data-item="Coffee" data-prices='{"Default": 100}'>Order</button>
         </div>
         <div class="menu-item">
             <span>Plain Milk</span> <span>KSh 150</span>
             <button class="order-btn" data-item="Plain Milk" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Hot Water</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Hot Water" data-prices='{"Default": 150}'>Order</button>
+            <span>Tea Masala</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Tea Masala" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Lemon Tea</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Lemon Tea" data-prices='{"Default": 150}'>Order</button>
+            <span>Fruits</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Fruits" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Chocolate</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Chocolate" data-prices='{"Default": 150}'>Order</button>
+            <span>Fresh Juice</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Fresh Juice" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Nescafe</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Nescafe" data-prices='{"Default": 150}'>Order</button>
+            <span>Strawberry Milkshake</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Strawberry Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>CLemon Tea</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="CLemon Tea" data-prices='{"Default": 150}'>Order</button>
+            <span>Ice Cream</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 200}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Mango Milkshake</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Mango Milkshake" data-prices='{"Default": 250}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Vanilla Milkshake</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Vanilla Milkshake" data-prices='{"Default": 250}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Ice Cream</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 200}'>Order</button>
         </div>
     </div>
 
@@ -271,40 +283,40 @@ import Layout from "../layouts/Layout.astro";
     </div>
     <div class="menu-list">
         <div class="menu-item">
-            <span>Mandazi</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Mandazi" data-prices='{"Default": 200}'>Order</button>
+            <span>Mandazi</span> <span>KSh 30</span>
+            <button class="order-btn" data-item="Mandazi" data-prices='{"Default": 30}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Chapati</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Chapati" data-prices='{"Default": 200}'>Order</button>
+            <span>Chapati</span> <span>KSh 50</span>
+            <button class="order-btn" data-item="Chapati" data-prices='{"Default": 50}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Beans</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Beans" data-prices='{"Default": 200}'>Order</button>
+            <span>Bread</span> <span>KSh 50</span>
+            <button class="order-btn" data-item="Bread" data-prices='{"Default": 50}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Samosa</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Samosa" data-prices='{"Default": 200}'>Order</button>
+            <span>Samosa</span> <span>KSh 50</span>
+            <button class="order-btn" data-item="Samosa" data-prices='{"Default": 50}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Sausage</span> <span>KSh 200</span>
+            <span>Sausage/Samosa</span> <span>KSh 50</span>
             <button class="order-btn" data-item="Sausage" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Eggs</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Eggs" data-prices='{"Default": 200}'>Order</button>
+            <span>Fried Eggs</span> <span>KSh 100</span>
+            <button class="order-btn" data-item="Fried Eggs" data-prices='{"Default": 100}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Sweet Potatoes</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Sweet Potatoes" data-prices='{"Default": 200}'>Order</button>
+            <span>SFrench Fries</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="French Fries" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Nduma</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Nduma" data-prices='{"Default": 200}'>Order</button>
+            <span>Sausage</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Sausage" data-prices='{"Default": 70}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Baked Potatoes</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Baked Potatoes" data-prices='{"Default": 200}'>Order</button>
+            <span>Smokies</span> <span>KSh 200</span>
+            <button class="order-btn" data-item="Smokies" data-prices='{"Default": 50}'>Order</button>
         </div>
     </div>
     <div class="image-row">
