--- a/src/pages/meals.astro
+++ b/src/pages/meals.astro
@@ -337,10 +337,10 @@ import Layout from "../layouts/Layout.astro";
                 <button class="order-btn" data-item="Beef" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
-                <img src="/goat.jpg" alt="Goat Meat" loading="lazy">
-                <span>Goat Meat</span>
+                <img src="/goat.jpg" alt="Mbuzi Choma" loading="lazy">
+                <span>Mbuzi Choma</span>
                 <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
-                <button class="order-btn" data-item="Goat Meat" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
+                <button class="order-btn" data-item="Mbuzi Choma" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
                 <img src="/pork.jpg" alt="Pork" loading="lazy">
