--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -587,14 +587,14 @@ const { title = 'Nebraska Lounge & Grill', subtitle = 'Welcome to Our Offerings'
                 <div class="event-details">Easter Fest- Music/Comedy- April 19, 2025</div>
             </div>
             <div class="event-slide">
-                <img src="/event5.jpg" alt="Event 5" loading="lazy">
+                <img src="/event4.jpg" alt="Event 5" loading="lazy">
                 <div class="event-details">Easter Music/Comedy Show - April 19, 2025</div>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>Contact Us: 0700-123-456 | Email: info@clubnebraska.com</p>
+        <p>Contact Us: 0707444742</p>
         <p>© 2025 Club Nebraska. All Rights Reserved.</p>
         <p>Designed By <a href="https://winkdevsolutions.com" target="_blank">WinKDev Solutions</a></p>
     </footer>
