--- a/src/pages/meals.astro
+++ b/src/pages/meals.astro
@@ -297,27 +297,27 @@ import Layout from "../layouts/Layout.astro";
 
     <div class="gallery-container">
         <div class="gallery">
-            <img src="/meal1.jpg" alt="Meal Image 1" loading="lazy">
-            <img src="/meal2.jpg" alt="Meal Image 2" loading="lazy">
-            <img src="/meal3.jpg" alt="Meal Image 3" loading="lazy">
-            <img src="/meal4.jpg" alt="Meal Image 4" loading="lazy">
-            <img src="/meal5.jpg" alt="Meal Image 5" loading="lazy">
-            <img src="/meal6.jpg" alt="Meal Image 6" loading="lazy">
-            <img src="/meal7.jpg" alt="Meal Image 7" loading="lazy">
-            <img src="/meal8.jpg" alt="Meal Image 8" loading="lazy">
-            <img src="/meal9.jpg" alt="Meal Image 9" loading="lazy">
-            <img src="/meal10.jpg" alt="Meal Image 10" loading="lazy">
+            <img src="/sizzling11.jpg" alt="Meal Image 1" loading="lazy">
+            <img src="/sizzling2.jpg" alt="Meal Image 2" loading="lazy">
+            <img src="/fish.jpg" alt="Meal Image 3" loading="lazy">
+            <img src="/full-breakfast.jpg" alt="Meal Image 4" loading="lazy">
+            <img src="/pork.jpg" alt="Meal Image 5" loading="lazy">
+            <img src="/chicken.jpg" alt="Meal Image 6" loading="lazy">
+            <img src="/sizzling3.jpg" alt="Meal Image 7" loading="lazy">
+            <img src="/sizzling4.jpg" alt="Meal Image 8" loading="lazy">
+            <img src="/sizzling5.jpg" alt="Meal Image 9" loading="lazy">
+            <img src="/snacks5.jpg" alt="Meal Image 10" loading="lazy">
             <!-- Duplicates for seamless sliding -->
-            <img src="/meal1.jpg" alt="Meal Image 1" loading="lazy">
-            <img src="/meal2.jpg" alt="Meal Image 2" loading="lazy">
-            <img src="/meal3.jpg" alt="Meal Image 3" loading="lazy">
-            <img src="/meal4.jpg" alt="Meal Image 4" loading="lazy">
-            <img src="/meal5.jpg" alt="Meal Image 5" loading="lazy">
-            <img src="/meal6.jpg" alt="Meal Image 6" loading="lazy">
-            <img src="/meal7.jpg" alt="Meal Image 7" loading="lazy">
-            <img src="/meal8.jpg" alt="Meal Image 8" loading="lazy">
-            <img src="/meal9.jpg" alt="Meal Image 9" loading="lazy">
-            <img src="/meal10.jpg" alt="Meal Image 10" loading="lazy">
+            <img src="/sizzling11.jpg" alt="Meal Image 1" loading="lazy">
+            <img src="/sizzling2.jpg" alt="Meal Image 2" loading="lazy">
+            <img src="/fish.jpg" alt="Meal Image 3" loading="lazy">
+            <img src="/full-breakfast.jpg" alt="Meal Image 4" loading="lazy">
+            <img src="/pork.jpg" alt="Meal Image 5" loading="lazy">
+            <img src="/chicken.jpg" alt="Meal Image 6" loading="lazy">
+            <img src="/sizzling3.jpg" alt="Meal Image 7" loading="lazy">
+            <img src="/sizzling4.jpg" alt="Meal Image 8" loading="lazy">
+            <img src="/sizzling5.jpg" alt="Meal Image 9" loading="lazy">
+            <img src="/snacks5.jpg" alt="Meal Image 10" loading="lazy">
         </div>
     </div>
 
@@ -326,13 +326,13 @@ import Layout from "../layouts/Layout.astro";
         <div class="main-dishes">
             <div class="main-dish">
                 <img src="/chicken.jpg" alt="Chicken" loading="lazy">
-                <span>Chicken</span>
+                <span>Chicken(Stew, Wet,Dry Fry)</span>
                 <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
                 <button class="order-btn" data-item="Chicken" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
                 <img src="/beef.jpg" alt="Beef" loading="lazy">
-                <span>Beef</span>
+                <span>Beef(Stew, Dry, Wet Fry)</span>
                 <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
                 <button class="order-btn" data-item="Beef" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
             </div>
