--- a/src/pages/breakfast.astro
+++ b/src/pages/breakfast.astro
@@ -254,12 +254,12 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Fresh Juice" data-prices='{"Default": 150}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Strawberry Milkshake</span> <span>KSh 150</span>
-            <button class="order-btn" data-item="Strawberry Milkshake" data-prices='{"Default": 250}'>Order</button>
-        </div>
-        <div class="menu-item">
             <span>Ice Cream</span> <span>KSh 200</span>
             <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 200}'>Order</button>
+        </div>
+        <div class="menu-item">
+            <span>Strawberry Milkshake</span> <span>KSh 150</span>
+            <button class="order-btn" data-item="Strawberry Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
             <span>Mango Milkshake</span> <span>KSh 150</span>
@@ -270,8 +270,8 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="Vanilla Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Ice Cream</span> <span>KSh 200</span>
-            <button class="order-btn" data-item="Ice Cream" data-prices='{"Default": 200}'>Order</button>
+            <span>Chocolate Milkshake</span> <span>KSh 250</span>
+            <button class="order-btn" data-item="Chocolate Milkshake" data-prices='{"Default": 250}'>Order</button>
         </div>
     </div>
 
@@ -311,11 +311,11 @@ import Layout from "../layouts/Layout.astro";
             <button class="order-btn" data-item="French Fries" data-prices='{"Default": 200}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Sausage</span> <span>KSh 200</span>
+            <span>Sausage</span> <span>KSh 70</span>
             <button class="order-btn" data-item="Sausage" data-prices='{"Default": 70}'>Order</button>
         </div>
         <div class="menu-item">
-            <span>Smokies</span> <span>KSh 200</span>
+            <span>Smokies</span> <span>KSh 50</span>
             <button class="order-btn" data-item="Smokies" data-prices='{"Default": 50}'>Order</button>
         </div>
     </div>
