--- a/src/pages/meals.astro
+++ b/src/pages/meals.astro
@@ -297,7 +297,7 @@ import Layout from "../layouts/Layout.astro";
 
     <div class="gallery-container">
         <div class="gallery">
-            <img src="/sizzling11.jpg" alt="Meal Image 1" loading="lazy">
+            <img src="/sizzling1.jpg" alt="Meal Image 1" loading="lazy">
             <img src="/sizzling2.jpg" alt="Meal Image 2" loading="lazy">
             <img src="/fish.jpg" alt="Meal Image 3" loading="lazy">
             <img src="/full-breakfast.jpg" alt="Meal Image 4" loading="lazy">
@@ -308,7 +308,7 @@ import Layout from "../layouts/Layout.astro";
             <img src="/sizzling5.jpg" alt="Meal Image 9" loading="lazy">
             <img src="/snacks5.jpg" alt="Meal Image 10" loading="lazy">
             <!-- Duplicates for seamless sliding -->
-            <img src="/sizzling11.jpg" alt="Meal Image 1" loading="lazy">
+            <img src="/sizzling1.jpg" alt="Meal Image 1" loading="lazy">
             <img src="/sizzling2.jpg" alt="Meal Image 2" loading="lazy">
             <img src="/fish.jpg" alt="Meal Image 3" loading="lazy">
             <img src="/full-breakfast.jpg" alt="Meal Image 4" loading="lazy">
@@ -333,8 +333,8 @@ import Layout from "../layouts/Layout.astro";
             <div class="main-dish">
                 <img src="/beef.jpg" alt="Beef" loading="lazy">
                 <span>Beef(Stew, Dry, Wet Fry)</span>
-                <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
-                <button class="order-btn" data-item="Beef" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
+                <div class="price-overlay">1/4KG - KSh 350<br>1/2KG - KSh 700<br>1KG - KSh 1400</div>
+                <button class="order-btn" data-item="Beef" data-prices='{"1/4KG": 350, "1/2KG": 700, "1KG": 1400}'>Order</button>
             </div>
             <div class="main-dish">
                 <img src="/goat.jpg" alt="Mbuzi Choma" loading="lazy">
@@ -345,8 +345,8 @@ import Layout from "../layouts/Layout.astro";
             <div class="main-dish">
                 <img src="/pork.jpg" alt="Pork" loading="lazy">
                 <span>Pork</span>
-                <div class="price-overlay">1/4KG - KSh 400<br>1/2KG - KSh 750<br>1KG - KSh 1400</div>
-                <button class="order-btn" data-item="Pork" data-prices='{"1/4KG": 400, "1/2KG": 750, "1KG": 1400}'>Order</button>
+                <div class="price-overlay">1/4KG - KSh 350<br>1/2KG - KSh 700<br>1KG - KSh 1400</div>
+                <button class="order-btn" data-item="Pork" data-prices='{"1/4KG": 350, "1/2KG": 700, "1KG": 1400}'>Order</button>
             </div>
         </div>
     </section>
@@ -407,8 +407,8 @@ import Layout from "../layouts/Layout.astro";
                     <button class="order-btn" data-item="Matoke" data-prices='{"Default": 100}'>Order</button>
                 </div>
                 <div class="menu-item">
-                    <span>Vegetables</span> <span>KSh 100</span>
-                    <button class="order-btn" data-item="Vegetables" data-prices='{"Default": 100}'>Order</button>
+                    <span>Veges(Kales/Kienyeji)</span> <span>KSh 150</span>
+                    <button class="order-btn" data-item="Vegetables" data-prices='{"Default": 150}'>Order</button>
                 </div>
             </div>
         </div>
