--- a/src/pages/specials.astro
+++ b/src/pages/specials.astro
@@ -276,7 +276,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
     </div>
     <div class="full-breakfast">
-        <img src="/beef-boil.jpg" alt="Beef Boil Ganga with Ojuri" loading="lazy">
+        <img src="/sizzling2.jpg" alt="Beef Boil Ganga with Ojuri" loading="lazy">
         <div class="full-breakfast-details">
             <span>Beef Boil Ganga with Ojuri - KSh 600</span>
             <p>Served with veges.</p>
@@ -286,9 +286,9 @@ import Layout from "../layouts/Layout.astro";
     <div class="full-breakfast">
         <img src="/specials1.jpg" alt="NEB Birthday Packages" loading="lazy">
         <div class="full-breakfast-details">
-            <span>NEB Birthday Packages - KSh 5000</span>
+            <span>NEB Birthday Packages - KSh 15000</span>
             <p>Served with a custom cake, assorted drinks, and a festive platter for your group.</p>
-            <button class="order-btn" data-item="NEB Birthday Packages" data-prices='{"Default": 5000}'>Order</button>
+            <button class="order-btn" data-item="NEB Birthday Packages" data-prices='{"Default": 15000}'>Order</button>
         </div>
     </div>
 
